--- a/pasta-html/index.html
+++ b/pasta-html/index.html
@@ -80,17 +80,17 @@
             <img src="../Capas/OsEscravos.jpg" alt="Os Escravos" />
             <img src="../Capas/DomCasmurro.jpg" alt="Dom Casmurro" />
             <img src="../Capas/ADivinaComedia.jpg" alt="A Dívina Comédia" />
-            <img src="../Capas/ADamadasCamelias.jpg" alt="A Dama das Camelias" />
-            <img src="../Capas/AAlmadoLazaro.jpg" alt="A Alma do Lazaro" />
+            <img src="../Capas/ADamaDasCamelias.jpg" alt="A Dama das Camelias" />
+            <img src="../Capas/AAlmaDoLazaro.jpg" alt="A Alma do Lazaro" />
             <img src="../Capas/Helena.jpg" alt="Helena" />
             <img src="../Capas/ABelaMadameVargas.jpg" alt="A Bela Madame Vargas" />
             <img src="../Capas/AUtopia.jpg" alt="A Utopia" />
-            <img src="../Capas/AIgrejadoDiabo.jpg" alt="A IgrejaDoDiabo" />
+            <img src="../Capas/AIgrejaDoDiabo.jpg" alt="A IgrejaDoDiabo" />
             <img src="../Capas/AMoreninha.jpg" alt="A Moreninha" />
-            <img src="../Capas/AHarpadoCrente.jpg" alt="A Harpa do Crente" />
+            <img src="../Capas/AHarpaDoCrente.jpg" alt="A Harpa do Crente" />
             <img src="../Capas/Cancioneiro.jpg" alt="Cacioneiro" />
             <img src="../Capas/EsteMundoDaInjusticaGlobalizada.jpg" alt="Este Mundo Da injustiça Globalizada" />
-            <img src="../Capas/LivrodeMaguas.jpg" alt="Livro de Máguas" />
+            <img src="../Capas/LivroDeMaguas.jpg" alt="Livro de Máguas" />
             <img src="../Capas/ATempestade.jpg" alt="">
             <img src="../Capas/OsMaias.jpg" alt="">
             <!--2º Loop-->
@@ -102,17 +102,17 @@
             <img src="../Capas/OsEscravos.jpg" alt="Os Escravos" />
             <img src="../Capas/DomCasmurro.jpg" alt="Dom Casmurro" />
             <img src="../Capas/ADivinaComedia.jpg" alt="A Dívina Comédia" />
-            <img src="../Capas/ADamadasCamelias.jpg" alt="A Dama das Camelias" />
-            <img src="../Capas/AAlmadoLazaro.jpg" alt="A Alma do Lazaro" />
+            <img src="../Capas/ADamaDasCamelias.jpg" alt="A Dama das Camelias" />
+            <img src="../Capas/AAlmaDoLazaro.jpg" alt="A Alma do Lazaro" />
             <img src="../Capas/Helena.jpg" alt="Helena" />
             <img src="../Capas/ABelaMadameVargas.jpg" alt="A Bela Madame Vargas" />
             <img src="../Capas/AUtopia.jpg" alt="A Utopia" />
-            <img src="../Capas/AIgrejadoDiabo.jpg" alt="A IgrejaDoDiabo" />
+            <img src="../Capas/AIgrejaDoDiabo.jpg" alt="A IgrejaDoDiabo" />
             <img src="../Capas/AMoreninha.jpg" alt="A Moreninha" />
-            <img src="../Capas/AHarpadoCrente.jpg" alt="A Harpa do Crente" />
+            <img src="../Capas/AHarpaDoCrente.jpg" alt="A Harpa do Crente" />
             <img src="../Capas/Cancioneiro.jpg" alt="Cacioneiro" />
             <img src="../Capas/EsteMundoDaInjusticaGlobalizada.jpg" alt="Este Mundo Da injustiça Globalizada" />
-            <img src="../Capas/LivrodeMaguas.jpg" alt="Livro de Máguas" />
+            <img src="../Capas/LivroDeMaguas.jpg" alt="Livro de Máguas" />
             <img src="../Capas/ATempestade.jpg" alt="">
             <img src="../Capas/OsMaias.jpg" alt="">
             <!--3º Loop-->
@@ -124,17 +124,17 @@
             <img src="../Capas/OsEscravos.jpg" alt="Os Escravos" />
             <img src="../Capas/DomCasmurro.jpg" alt="Dom Casmurro" />
             <img src="../Capas/ADivinaComedia.jpg" alt="A Dívina Comédia" />
-            <img src="../Capas/ADamadasCamelias.jpg" alt="A Dama das Camelias" />
-            <img src="../Capas/AAlmadoLazaro.jpg" alt="A Alma do Lazaro" />
+            <img src="../Capas/ADamaDasCamelias.jpg" alt="A Dama das Camelias" />
+            <img src="../Capas/AAlmaDoLazaro.jpg" alt="A Alma do Lazaro" />
             <img src="../Capas/Helena.jpg" alt="Helena" />
             <img src="../Capas/ABelaMadameVargas.jpg" alt="A Bela Madame Vargas" />
             <img src="../Capas/AUtopia.jpg" alt="A Utopia" />
-            <img src="../Capas/AIgrejadoDiabo.jpg" alt="A IgrejaDoDiabo" />
+            <img src="../Capas/AIgrejaDoDiabo.jpg" alt="A IgrejaDoDiabo" />
             <img src="../Capas/AMoreninha.jpg" alt="A Moreninha" />
-            <img src="../Capas/AHarpadoCrente.jpg" alt="A Harpa do Crente" />
+            <img src="../Capas/AHarpaDoCrente.jpg" alt="A Harpa do Crente" />
             <img src="../Capas/Cancioneiro.jpg" alt="Cacioneiro" />
             <img src="../Capas/EsteMundoDaInjusticaGlobalizada.jpg" alt="Este Mundo Da injustiça Globalizada" />
-            <img src="../Capas/LivrodeMaguas.jpg" alt="Livro de Máguas" />
+            <img src="../Capas/LivroDeMaguas.jpg" alt="Livro de Máguas" />
             <img src="../Capas/ATempestade.jpg" alt="">
             <img src="../Capas/OsMaias.jpg" alt="">
         </div>
