--- a/livro/sinopse.html
+++ b/livro/sinopse.html
@@ -74,6 +74,7 @@
             <div class="info">
                 <span class="tag autor" id="autor"></span>
                 <span class="tag paginas" id="paginas"></span>
+                <span class="tag paginas" id="paginas2"></span>
             </div>
 
             <div class="sinopse">
