--- a/pasta-html/faleconosco.html
+++ b/pasta-html/faleconosco.html
@@ -15,7 +15,7 @@
   <button id="btn-modo-leitura"></button>
 
   <h1>Formulário de Contato</h1>
-  <form action="https://formsubmit.co/joao.g.oliveira6@gmail.com" method="POST" class="form">
+  <form action="https://formsubmit.co/joao.g.oliveira6@aluno.senai.br" method="POST" class="form">
     <label for="name">Nome</label>
     <input type="text" name="name" id="name" required />
     <label for="email">E-mail</label>
