mudando o nome do pdf da a alma do lazaro

--- a/pasta-html/index.html
+++ b/pasta-html/index.html
@@ -81,7 +81,7 @@
             <img src="../Capas/DomCasmurro.jpg" alt="Dom Casmurro" />
             <img src="../Capas/ADivinaComedia.jpg" alt="A Dívina Comédia" />
             <img src="../Capas/ADamaDasCamelias.jpg" alt="A Dama das Camelias" />
-            <img src="../Capas/AAlmaDoLazaro.jpg" alt="A Alma do Lazaro" />
+            <img src="../Capas/AAlmadoLazaro.jpg" alt="A Alma do Lazaro" />
             <img src="../Capas/Helena.jpg" alt="Helena" />
             <img src="../Capas/ABelaMadameVargas.jpg" alt="A Bela Madame Vargas" />
             <img src="../Capas/AUtopia.jpg" alt="A Utopia" />
@@ -103,7 +103,7 @@
             <img src="../Capas/DomCasmurro.jpg" alt="Dom Casmurro" />
             <img src="../Capas/ADivinaComedia.jpg" alt="A Dívina Comédia" />
             <img src="../Capas/ADamaDasCamelias.jpg" alt="A Dama das Camelias" />
-            <img src="../Capas/AAlmaDoLazaro.jpg" alt="A Alma do Lazaro" />
+            <img src="../Capas/AAlmadoLazaro.jpg" alt="A Alma do Lazaro" />
             <img src="../Capas/Helena.jpg" alt="Helena" />
             <img src="../Capas/ABelaMadameVargas.jpg" alt="A Bela Madame Vargas" />
             <img src="../Capas/AUtopia.jpg" alt="A Utopia" />
@@ -125,7 +125,7 @@
             <img src="../Capas/DomCasmurro.jpg" alt="Dom Casmurro" />
             <img src="../Capas/ADivinaComedia.jpg" alt="A Dívina Comédia" />
             <img src="../Capas/ADamaDasCamelias.jpg" alt="A Dama das Camelias" />
-            <img src="../Capas/AAlmaDoLazaro.jpg" alt="A Alma do Lazaro" />
+            <img src="../Capas/AAlmadoLazaro.jpg" alt="A Alma do Lazaro" />
             <img src="../Capas/Helena.jpg" alt="Helena" />
             <img src="../Capas/ABelaMadameVargas.jpg" alt="A Bela Madame Vargas" />
             <img src="../Capas/AUtopia.jpg" alt="A Utopia" />
