--- a/livro/sinopse.html
+++ b/livro/sinopse.html
@@ -136,6 +136,7 @@
     <script src="../pasta-js/sinopse.js"></script>
     <script src="../pasta-js/personalizacao.js"></script>
     <script src="../pasta-js/usersedit.js"></script>
+    <script src="../pasta-js/usersGlobal.js"></script>
 </body>
 
 </html>
