--- a/pasta-html/cadastro.html
+++ b/pasta-html/cadastro.html
@@ -20,7 +20,8 @@
 
             <div class="card-login">
                 <img src="../LOGOS/Logo-fundo transparente-recortado.png">
-                <form id="formCadastro" action="../pasta-php/cadastrar.php" method="POST">
+               <form id="formCadastro" action="../pasta-php/cadastrar.php" method="POST" enctype="multipart/form-data">
+
 
                     <div class="textfield">
                         <label for="nome">Nome completo</label>
@@ -46,6 +47,11 @@
                         <label for="confirmar-senha">Confirmar senha</label>
                         <input type="password" id="confirmar_senha" name="confirmar_senha"
                             placeholder="Confirme a senha" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="imagem">Imagem</label>
+                        <input type="file" name="imagem" class="form-control" accept="imagem/*">
                     </div>
 
                     <div class="signup-text">
