--- a/pasta-html/index.html
+++ b/pasta-html/index.html
@@ -185,6 +185,8 @@
 <script src="../pasta-js/personalizacao.js"></script>
 <script src="../pasta-js/menuPerfil.js"></script>
 <script src="../pasta-js/usersedit.js"></script>
+<script src="../pasta-js/usersGlobal.js"></script>
+
 </body>
 
 </html>
