--- a/pasta-html/livros.html
+++ b/pasta-html/livros.html
@@ -152,6 +152,7 @@
   </script>
   <script src="../pasta-js/menuPerfil.js"></script>
   <script src="../pasta-js/usersedit.js"></script>
+  <script src="../pasta-js/usersGlobal.js"></script>
 
 </body>
 
