--- a/pasta-html/sobre.html
+++ b/pasta-html/sobre.html
@@ -143,6 +143,7 @@
     <script src="../pasta-js/personalizacao.js"></script>
     <script src="../pasta-js/menuPerfil.js"></script>
     <script src="../pasta-js/usersedit.js"></script>
+    <script src="../pasta-js/usersGlobal.js"></script>
 </body>
 
 </html>
