--- a/pasta-html/perfil.html
+++ b/pasta-html/perfil.html
@@ -63,7 +63,7 @@
         <aside class="profile-sidebar">
             <div class="profile-card">
                 <div class="profile-avatar-wrapper">
-                    <img id="profile-avatar" src="./pasta-php/imagens-usuarios"
+                    <img id="profile-avatar" src="./pasta-php/uploads"
                         alt="Foto de perfil">
                 </div>
                 <h2 id="user-name">Nome do Usuário</h2>
