corrigindo de desmarcar pagina e o banco nao salvar

--- a/pasta-html/perfil.html
+++ b/pasta-html/perfil.html
@@ -144,8 +144,11 @@
     <div id="login-modal" class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title" aria-describedby="login-modal-desc" hidden>
         <div class="login-modal-content">
             <div class="spinner" aria-hidden="true"></div>
-            <h3 id="login-modal-title">Você precisa entrar para acessar o perfil</h3>
-            <p id="login-modal-desc">Redirecionando para a tela de login...</p>
+            <h3 id="login-modal-title">Acesso restrito</h3>
+            <p id="login-modal-desc">É necessário entrar para acessar o perfil. Você será redirecionado para o login.</p>
+            <div class="login-modal-actions">
+                <button id="login-now" class="btn-primary">Ir agora</button>
+            </div>
         </div>
     </div>
 
