--- a/pasta-html/livros.html
+++ b/pasta-html/livros.html
@@ -78,6 +78,8 @@
         <li><button data-genero="Ensaio">Ensaio</button></li>
         <li><button data-genero="Teatro">Teatro</button></li>
         <li><button data-genero="Histórico">Histórico</button></li>
+        <li><button data-genero="Mangá">Mangá</button></li>
+        <li><button data-genero="História em Quadrinhos">História em Quadrinhos</button></li>
         <li><button data-genero="Todos">Todos</button></li>
         <h3>Categoria/Pesquisa</h3>
         <h3 id="generoSelecionadoTexto"></h3>
