--- a/pasta-html/livros.html
+++ b/pasta-html/livros.html
@@ -29,8 +29,8 @@
           <div class="profile-img">
             <img src="../IMAGENS/SemFoto.jpg" alt="">
           </div>
-          <span id="profile-nome" class="profile-nome" onclick="window.location.href='../pasta-html/login.html'"
-            style="cursor:pointer;">
+          <span style="display: none;" id="profile-nome" class="profile-nome"
+            onclick="window.location.href='../pasta-html/login.html'" style="cursor:pointer;">
             Logar
           </span>
           <i id="setinha" class="fa-solid fa-angle-down" onclick="toggle()" style="cursor:pointer;"></i>
