adicionando um detalhe ao css de algumas paginas

--- a/pasta-html/perfil.html
+++ b/pasta-html/perfil.html
@@ -138,6 +138,7 @@
     <script src="../pasta-js/perfil.js"></script>
     <script src="../pasta-js/menuPerfil.js"></script>
     <script src="../pasta-js/usersedit.js"></script>
+    <script src="../pasta-js/usersGlobal.js"></script>
 
     <!-- Modal de login usado quando usuário não está autenticado -->
     <div id="login-modal" class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title" aria-describedby="login-modal-desc" hidden>
