--- a/pasta-html/perfil.html
+++ b/pasta-html/perfil.html
@@ -62,8 +62,8 @@
     <main class="profile-container">
         <!-- Novo layout: coluna esquerda (progresso) | centro (perfil) | direita (concluídos) -->
         <div class="profile-layout">
-            <div class="books-column books-left">
-                <div class="book-section">
+            <div id="book-section1" class="books-column books-left">
+                <div id="book-section1" class="book-section1">
                     <h2>Livros em progresso</h2>
                     <div id="inprogress-scroll" class="books-scroll">
                         <div id="inprogress-grid" class="book-grid"></div>
@@ -78,16 +78,12 @@
                     </div>
                     <h2 id="user-name">Nome do Usuário</h2>
                     <p id="user-username">@username</p>
-                    <div class="leitura-stats">
-                        <p class="tempo-leitura-label">Tempo de leitura estimado</p>
-                        <p id="tempo-leitura" class="tempo-leitura-valor">0h 0m</p>
-                    </div>
                 </div>
             </div>
 
             <div class="books-column books-right">
-                <div class="book-section">
-                    <h2>Livros concluidos</h2>
+                <div id="book-section2" class="book-section2">
+                    <h2>Livros concluídos</h2>
                     <div id="concluded-scroll" class="books-scroll">
                         <div id="concluded-grid" class="book-grid"></div>
                     </div>
@@ -141,11 +137,13 @@
     <script src="../pasta-js/usersGlobal.js"></script>
 
     <!-- Modal de login usado quando usuário não está autenticado -->
-    <div id="login-modal" class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title" aria-describedby="login-modal-desc" hidden>
+    <div id="login-modal" class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title"
+        aria-describedby="login-modal-desc" hidden>
         <div class="login-modal-content">
             <div class="spinner" aria-hidden="true"></div>
             <h3 id="login-modal-title">Acesso restrito</h3>
-            <p id="login-modal-desc">É necessário entrar para acessar o perfil. Você será redirecionado para o login.</p>
+            <p id="login-modal-desc">É necessário entrar para acessar o perfil. Você será redirecionado para o login.
+            </p>
             <div class="login-modal-actions">
                 <button id="login-now" class="btn-primary">Ir agora</button>
             </div>
