--- a/pasta-html/index.html
+++ b/pasta-html/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="../pasta-css/home.css">
     <link rel="stylesheet" href="../pasta-css/livros.css">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
-    <title>BookSphere</title>
+    <title>BookSphere | Site para Leituras de Livros Online</title>
     <meta name="description"
-        content="Explore o Universo dos Livros - Descubra, leia e aproveite suas histórias favoritas em um só lugar. Descubra histórias que inspiram, emocionam e transformam. Navegue pela nossa coleção e encontre o próximo livro que vai acompanhar você em cada momento da sua jornada.">
+        content="Leia clássicos da literatura e livros de domínio público online e grátis.
+        A BookSphere oferece a função de ler livros online e também a opção de baixar os PDFs.">
 </head>
 <div class="cabeçario">
     <img class="logo-cabeçario" src="../LOGOS/Logo-fundo transparente-recortado.png" alt="Logo do Site"
