--- a/pasta-html/perfil.html
+++ b/pasta-html/perfil.html
@@ -136,7 +136,19 @@
     <script src="../pasta-js/usersedit.js"></script>
     <script src="../pasta-js/usersGlobal.js"></script>
 
-    
+    <!-- Modal de login usado quando usuário não está autenticado -->
+    <div id="login-modal" class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title"
+        aria-describedby="login-modal-desc" hidden>
+        <div class="login-modal-content">
+            <div class="spinner" aria-hidden="true"></div>
+            <h3 id="login-modal-title">Acesso restrito</h3>
+            <p id="login-modal-desc">É necessário fazer login para acessar o perfil. Clique no botão abaixo para ser redirecionado para o login.
+            </p>
+            <div class="login-modal-actions">
+                <button id="login-now" class="btn-primary">Ir agora</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Container para toasts (mensagens rápidas) -->
     <div id="toast-container" class="toast-container" aria-live="polite" aria-atomic="true"></div>
