Atualizações feitas com sucesso em css, banco, salvar anotações, zoom, scroll v e h nos livros e etc

--- a/livro/sinopse.html
+++ b/livro/sinopse.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../pasta-css/livros.css">
     <link rel="stylesheet" href="../pasta-css/sinopse.css">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
-    <title>BookSphere</title>
+    <title>BookSphere | Sinopse</title>
 </head>
 
 <body>
