--- a/pasta-html/cadastro.html
+++ b/pasta-html/cadastro.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="LOGOS/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../pasta-css/cadastro.css">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
-    <title>Cadastro</title>
+    <title>BookSphere | Cadastro</title>
 </head>
 
 <body>
