--- a/pasta-html/faleconosco.html
+++ b/pasta-html/faleconosco.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Formulário de Contato</title>
+  <title>BookSphere | Formulário de Contato</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../pasta-css/faleconosco.css" />
   <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
@@ -15,7 +15,7 @@
   <button id="btn-modo-leitura"></button>
 
   <h1>Formulário de Contato</h1>
-  <form action="https://formsubmit.co/joao.gui.gallindo.oliveira@gmail.com" method="POST" class="form">
+  <form action="https://formsubmit.co/booksphere@booksphere.sbs" method="POST" class="form">
     <label for="name">Nome</label>
     <input type="text" name="name" id="name" required />
     <label for="email">E-mail</label>
