--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../pasta-css/login.css">
-    <title>Login</title>
+    <title>BookSphere | Login</title>
 </head>
 
 <body>
