--- a/pasta-html/obrigado.html
+++ b/pasta-html/obrigado.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../pasta-css/obrigado.css" />
-  <title>Obrigado</title>
+  <title>BookSphere | Obrigado</title>
 </head>
 
 <body>
