--- a/pasta-html/livros.html
+++ b/pasta-html/livros.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="../pasta-css/livros.css" />
   <link rel="stylesheet" href="../pasta-css/home.css" />
   <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon" />
-
-  <title>BookSphere</title>
+  <title>BookSphere | Biblioteca</title>
 </head>
 
 <body>
