--- a/pasta-html/sobre.html
+++ b/pasta-html/sobre.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../pasta-css/home.css">
     <link rel="stylesheet" href="../pasta-css/livros.css">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
-    <title>BookSphere</title>
+    <title>BookSphere | Sobre Nós</title>
 </head>
 
 <body>
