Co-authored-by: VictorOliveira2303 <VictorOliveira2303@users.noreply.github.com>

--- a/pasta-html/obrigado.html
+++ b/pasta-html/obrigado.html
@@ -19,11 +19,10 @@
       <h2>Obrigado</h2>
       <p>Retornaremos sua mensagem em breve</p>
     </div>
-    <a id="btn-back" href="../pasta-html/index.html">
+    <a id="btn-back" onclick="window.history.back(); return false;">
       <svg class="home-icon" viewBox="0 0 24 24" aria-hidden="true">
-        <path d="M3 9.5L12 2l9 7.5V20a1 1 0 0 1-1 1h-6v-6H10v6H4a1 1 0 0 1-1-1V9.5z" fill="currentColor" />
       </svg>
-      <span>Voltar para o site</span>
+      <span>Voltar para o site anterior</span>
     </a>
   </main>
 
