Co-authored-by: VictorOliveira2303 <VictorOliveira2303@users.noreply.github.com>

--- a/pasta-html/obrigado.html
+++ b/pasta-html/obrigado.html
@@ -19,7 +19,7 @@
       <h2>Obrigado</h2>
       <p>Retornaremos sua mensagem em breve</p>
     </div>
-    <a id="btn-back" onclick="window.history.back(); return false;">
+    <a id="btn-back" onclick="window.history.back(-2); return false;">
       <svg class="home-icon" viewBox="0 0 24 24" aria-hidden="true">
       </svg>
       <span>Voltar para o site anterior</span>
