--- a/pasta-html/cadastro.html
+++ b/pasta-html/cadastro.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="LOGOS/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../pasta-css/cadastro.css">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>BookSphere | Cadastro</title>
 </head>
 
@@ -20,7 +21,7 @@
 
             <div class="card-login">
                 <img src="../LOGOS/Logo-fundo transparente-recortado.png">
-               <form id="formCadastro" action="../pasta-php/cadastrar.php" method="POST" enctype="multipart/form-data">
+                <form id="formCadastro" action="../pasta-php/cadastrar.php" method="POST" enctype="multipart/form-data">
 
 
                     <div class="textfield">
@@ -41,12 +42,14 @@
                     <div class="textfield">
                         <label for="senha">Senha</label>
                         <input type="password" id="senha" name="senha" placeholder="Digite a senha" required>
+                        <i class="bi bi-eye-slash" id="toggleSenha"></i>
                     </div>
 
                     <div class="textfield">
                         <label for="confirmar-senha">Confirmar senha</label>
                         <input type="password" id="confirmar_senha" name="confirmar_senha"
                             placeholder="Confirme a senha" required>
+                        <i class="bi bi-eye-slash" id="toggleConfirmar"></i>
                     </div>
 
                     <div class="form-group">
