--- a/pasta-html/cadastro.html
+++ b/pasta-html/cadastro.html
@@ -36,7 +36,7 @@
 
                     <div class="textfield">
                         <label for="usuario">Usuário</label>
-                        <input type="text" id="usuario" name="usuario" placeholder="Digite seu usuário" required>
+                      <input type="text" id="nome" name="nome" placeholder="Digite o seu nome" required maxlength="100">
                     </div>
 
                     <div class="textfield">
