--- a/pasta-html/obrigado.html
+++ b/pasta-html/obrigado.html
@@ -19,9 +19,7 @@
       <h2>Obrigado</h2>
       <p>Retornaremos sua mensagem em breve</p>
     </div>
-    <a id="btn-back" onclick="window.history.back.go(-2); return false;">
-      <svg class="home-icon" viewBox="0 0 24 24" aria-hidden="true">
-      </svg>
+    <a id="btn-back" onclick="window.history.go(-2); return false;">
       <span>Voltar para o site anterior</span>
     </a>
   </main>
