Co-authored-by: VictorOliveira2303 <VictorOliveira2303@users.noreply.github.com> Co-authored-by: LeonardoRafaell <LeonardoRafaell@users.noreply.github.com>

--- a/pasta-html/index.html
+++ b/pasta-html/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="../pasta-css/livros.css">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
     <title>BookSphere | Site para Leituras de Livros Online</title>
-    <meta name="description"
-        content="Leia clássicos da literatura e livros de domínio público online e grátis.
-        A BookSphere oferece a função de ler livros online e também a opção de baixar os PDFs.">
+    <meta name="description" content="Leia livros online em nosso site de leitura grátis.
+        A BookSphere oferece a função de ler livros online e baixar os PDFs dos livros.">
 </head>
 <div class="cabeçario">
     <img class="logo-cabeçario" src="../LOGOS/Logo-fundo transparente-recortado.png" alt="Logo do Site"
