--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../pasta-css/login.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>BookSphere | Login</title>
 </head>
 
@@ -18,19 +19,19 @@
         <div class="right-login">
             <form id="formLogin" class="card-login" action="../pasta-php/login.php" method="POST">
 
-
                 <Img src="../LOGOS/Logo-fundo transparente-recortado.png">
 
                 <!--<h1>LOGIN</h1>-->
 
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
-                    <input type="text" id="usuario" name="usuario" placeholder="Digite o seu usuário" required>
+                    <input type="text" id="usuario" name="usuario" placeholder="Digite o seu usuário" required maxlength="30">
                 </div>
 
                 <div class="textfield">
                     <label for="senha">Senha</label>
                     <input type="password" id="senha" name="senha" placeholder="Digite a sua senha" required>
+                    <i class="bi bi-eye-slash" id="toggleSenha"></i>
                 </div>
 
                 <button type="submit" class="btn-login">Login</button>
