--- a/pasta-html/obrigado.html
+++ b/pasta-html/obrigado.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../pasta-css/obrigado.css" />
-  <title>Obrigado</title>
+  <title>BookSphere | Obrigado</title>
 </head>
 
 <body>
@@ -19,11 +19,8 @@
       <h2>Obrigado</h2>
       <p>Retornaremos sua mensagem em breve</p>
     </div>
-    <a id="btn-back" href="../pasta-html/index.html">
-      <svg class="home-icon" viewBox="0 0 24 24" aria-hidden="true">
-        <path d="M3 9.5L12 2l9 7.5V20a1 1 0 0 1-1 1h-6v-6H10v6H4a1 1 0 0 1-1-1V9.5z" fill="currentColor" />
-      </svg>
-      <span>Voltar para o site</span>
+    <a id="btn-back" onclick="window.history.go(-2); return false;">
+      <span>Voltar para o site anterior</span>
     </a>
   </main>
 
