--- a/pasta-html/perfil.html
+++ b/pasta-html/perfil.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../pasta-css/home.css">
     <link rel="stylesheet" href="../pasta-css/livros.css">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
-    <title>BookSphere</title>
+    <title>BookSphere | Perfil</title>
 </head>
 
 <body>
@@ -142,7 +142,7 @@
         <div class="login-modal-content">
             <div class="spinner" aria-hidden="true"></div>
             <h3 id="login-modal-title">Acesso restrito</h3>
-            <p id="login-modal-desc">É necessário entrar para acessar o perfil. Você será redirecionado para o login.
+            <p id="login-modal-desc">É necessário fazer login para acessar o perfil. Clique no botão abaixo para ser redirecionado para o login.
             </p>
             <div class="login-modal-actions">
                 <button id="login-now" class="btn-primary">Ir agora</button>
