atualizações feitas no dia 03/11
Co-authored-by: EsdrasCruz01 <EsdrasCruz01@users.noreply.github.com>
Co-authored-by: VictorOliveira2303 <VictorOliveira2303@users.noreply.github.com>
Co-authored-by: LeonardoRafaell <LeonardoRafaell@users.noreply.github.com>

--- a/pasta-html/index.html
+++ b/pasta-html/index.html
@@ -29,7 +29,7 @@
                     onclick="window.location.href='../pasta-html/login.html'" style="cursor:pointer;">
                     Logar
                 </span>
-                <i id="setinha" class="fa-solid fa-angle-down" onclick="toggle()" style="cursor:pointer;"></i>
+                <i id="setinha" class="fa-solid fa-angle-down" style="cursor:pointer;"></i>
 
             </div>
         </div>
@@ -55,15 +55,21 @@
             Sair
         </a>
     </li>
-
 </ul>
+
+<div id="global-alert-modal" class="global-modal" hidden>
+    <div class="global-modal-content">
+        <h3 class="global-modal-title">Aviso</h3>
+        <p id="global-alert-message" class="global-modal-text"></p>
+        <button id="global-alert-ok" class="global-modal-btn">OK</button>
+    </div>
+</div>
 
 <div class="centro">
     <div class="texto-centro">
         <h1>Explore o Universo dos Livros</h1>
         <h2>Descubra, leia e aproveite suas histórias favoritas em um só lugar.</h2>
         <a href="../pasta-html/livros.html" class="btn-biblioteca2">Acessar Biblioteca</a>
-
     </div>
     <img class="logo-centro" src="../LOGOS/Logo-centro.png" alt="">
 </div>
