--- a/pasta-html/livros.html
+++ b/pasta-html/livros.html
@@ -32,7 +32,7 @@
             onclick="window.location.href='../pasta-html/login.html'" style="cursor:pointer;">
             Logar
           </span>
-          <i id="setinha" class="fa-solid fa-angle-down" onclick="toggle()" style="cursor:pointer;"></i>
+          <i id="setinha" class="fa-solid fa-angle-down" style="cursor:pointer;"></i>
         </div>
       </div>
     </div>
@@ -61,8 +61,14 @@
         Sair
       </a>
     </li>
-
   </ul>
+  <div id="global-alert-modal" class="global-modal" hidden>
+    <div class="global-modal-content">
+      <h3 class="global-modal-title">Aviso</h3>
+      <p id="global-alert-message" class="global-modal-text"></p>
+      <button id="global-alert-ok" class="global-modal-btn">OK</button>
+    </div>
+  </div>
 
   <main class="container">
     <!-- MENU LATERAL -->
