Co-authored-by: LeonardoRafaell <LeonardoRafaell@users.noreply.github.com> Co-authored-by: João Guilherme Gallindo de Oliveira <joao.gui.gallindo.oliveira@gmail.com>

--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -21,8 +21,6 @@
 
                 <Img src="../LOGOS/Logo-fundo transparente-recortado.png">
 
-                <!--<h1>LOGIN</h1>-->
-
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
                     <input type="text" id="usuario" name="usuario" placeholder="Digite o seu usuário" required maxlength="30">
@@ -38,6 +36,9 @@
 
                 <div class="signup-text">
                     Não tem conta? <a href="cadastro.html">Cadastre-se</a>.
+                </div>
+                <div class="signup-text">
+                    Esqueceu sua senha? <a href="#" onclick="iniciarResetSenha()">Clique aqui!</a>.
                 </div>
 
                 <div class="box-msg">
