corrijindo alguns bugs

--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -38,7 +38,7 @@
                     Não tem conta? <a href="cadastro.html">Cadastre-se</a>.
                 </div>
                 <div class="signup-text">
-                    Esqueceu sua senha? <a href="#" onclick="iniciarResetSenha()">Clique aqui!</a>.
+                    Esqueceu sua senha? <a href="#" onclick="iniciarResetSenha()">Clique aqui</a>.
                 </div>
 
                 <div class="box-msg">
