--- a/pasta-html/home.html
+++ b/pasta-html/home.html
@@ -191,7 +191,7 @@
 <script src="../pasta-js/personalizacao.js"></script>
 <script src="../pasta-js/menuPerfil.js"></script>
 <script src="../pasta-js/usersedit.js"></script>
-<script src="../pasta-js/usersGlobal.js"></script>
+<script src="../pasta-js/usersGlobal.js?v=1.1"></script>
 
 </body>
 
