--- a/pasta-html/livros.html
+++ b/pasta-html/livros.html
@@ -154,7 +154,7 @@
   </script>
   <script src="../pasta-js/menuPerfil.js"></script>
   <script src="../pasta-js/usersedit.js"></script>
-  <script src="../pasta-js/usersGlobal.js"></script>
+  <script src="../pasta-js/usersGlobal.js?v=1.1"></script>
 
 </body>
 
