--- a/pasta-html/perfil.html
+++ b/pasta-html/perfil.html
@@ -134,7 +134,7 @@
     <script src="../pasta-js/perfil.js"></script>
     <script src="../pasta-js/menuPerfil.js"></script>
     <script src="../pasta-js/usersedit.js"></script>
-    <script src="../pasta-js/usersGlobal.js"></script>
+    <script src="../pasta-js/usersGlobal.js?v=1.1"></script>
 
     <!-- Modal de login usado quando usuário não está autenticado -->
     <div id="login-modal" class="login-modal" role="dialog" aria-modal="true" aria-labelledby="login-modal-title"
