--- a/pasta-html/sinopse.html
+++ b/pasta-html/sinopse.html
@@ -141,7 +141,7 @@
     <script src="../pasta-js/sinopse.js"></script>
     <script src="../pasta-js/personalizacao.js"></script>
     <script src="../pasta-js/usersedit.js"></script>
-    <script src="../pasta-js/usersGlobal.js"></script>
+    <script src="../pasta-js/usersGlobal.js?v=1.1"></script>
 </body>
 
 </html>
