--- a/pasta-html/sobre.html
+++ b/pasta-html/sobre.html
@@ -150,7 +150,7 @@
     <script src="../pasta-js/personalizacao.js"></script>
     <script src="../pasta-js/menuPerfil.js"></script>
     <script src="../pasta-js/usersedit.js"></script>
-    <script src="../pasta-js/usersGlobal.js"></script>
+    <script src="../pasta-js/usersGlobal.js?v=1.1"></script>
 </body>
 
 </html>
