--- a/pasta-html/obrigado.html
+++ b/pasta-html/obrigado.html
@@ -20,7 +20,7 @@
       <p>Retornaremos sua mensagem em breve</p>
     </div>
     <a id="btn-back" onclick="window.history.go(-2); return false;">
-      <span>Voltar para o site anterior</span>
+      <span>Voltar para o site</span>
     </a>
   </main>
 
