sistema de trocar senha e usuario atualizado

--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -38,10 +38,10 @@
                     Não tem conta? <a href="cadastro.html">Cadastre-se</a>.
                 </div>
                 <div class="signup-text">
-                    Esqueceu sua senha? <a href="recuperacaoSenha.html">Clique aqui</a>.
+                    Esqueceu sua senha? <a href="recuperar.html?tipo=senha">Clique aqui</a>.
                 </div>
                 <div class="signup-text">
-                    Esqueceu seu usuário? <a href="recuperacaoUsuario.html">Clique aqui</a>.
+                    Esqueceu seu usuário? <a href="recuperar.html?tipo=usuario">Clique aqui</a>.
                 </div>
 
                 <div class="box-msg">
