--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -23,7 +23,8 @@
 
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
-                    <input type="text" id="usuario" name="usuario" placeholder="Digite o seu usuário" required maxlength="30">
+                    <input type="text" id="usuario" name="usuario" placeholder="Digite o seu usuário" required
+                        maxlength="30">
                 </div>
 
                 <div class="textfield">
@@ -38,10 +39,12 @@
                     Não tem conta? <a href="cadastro.html">Cadastre-se</a>.
                 </div>
                 <div class="signup-text">
-                    Esqueceu sua senha? <a href="recuperar.html?tipo=senha">Clique aqui</a>.
+                    Esqueceu a senha?<a href="#"
+                        onclick="window.location.replace('recuperar.html?tipo=senha'); return false;"> Clique aqui.</a>
                 </div>
                 <div class="signup-text">
-                    Esqueceu seu usuário? <a href="recuperar.html?tipo=usuario">Clique aqui</a>.
+                    Esqueceu o usuário? <a href="#"
+                        onclick="window.location.replace('recuperar.html?tipo=usuario'); return false;"> Clique aqui.</a>
                 </div>
 
                 <div class="box-msg">
