Co-authored-by: VictorOliveira2303 <VictorOliveira2303@users.noreply.github.com> Co-authored-by: EsdrasCruz01 <EsdrasCruz01@users.noreply.github.com> Co-authored-by: LeonardoRafaell <LeonardoRafaell@users.noreply.github.com> Co-authored-by: LUIZZSANTOS9 <LUIZZSANTOS9@users.noreply.github.com>

--- a/pasta-html/sobre.html
+++ b/pasta-html/sobre.html
@@ -109,6 +109,11 @@
                 class="w-20 h-20 rounded-full mx-auto mb-2 object-cover border-2 border-blue-500 p-1">
             <h3 class="font-medium">Victor Kauã</h3>
         </div>
+        <div class="text-center">
+            <img src="../IMAGENS/Foto de Luiz.jpg" alt="Foto de Luiz"
+                class="w-20 h-20 rounded-full mx-auto mb-2 object-cover border-2 border-blue-500 p-1">
+            <h3 class="font-medium">Luiz Eduardo</h3>
+        </div>
 
     </div>
     <div class="fim">
