--- a/pasta-html/cadastro.html
+++ b/pasta-html/cadastro.html
@@ -24,7 +24,7 @@
 
                     <div class="textfield">
                         <label for="nome">Nome completo</label>
-                        <input type="text" id="nome" name="nome" placeholder="Digite o seu nome" required
+                        <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required
                             maxlength="100" autocomplete="name">
                     </div>
 
