--- a/pasta-html/home.html
+++ b/pasta-html/home.html
@@ -165,6 +165,28 @@
             <img src="../Capas/ViagensDeGulliver.jpg" alt="Livro de Máguas" />
             <img src="../Capas/APataDaGazela.jpg" alt="">
             <img src="../Capas/AArtePoetica.jpg" alt="">
+            <!--5º Loop-->
+            <img src="../Capas/OsSertoes.jpg" alt="Os Sertoes" />
+            <img src="../Capas/OMulato.jpg" alt="O Mulato" />
+            <img src="../Capas/DomQuixoteVolumeII.jpg" alt="Dom Quixote Volume II" />
+            <img src="../Capas/ViaLactea.jpg" alt="Via Lactea" />
+            <img src="../Capas/Macbeth.jpg" alt="Macbeth" />
+            <img src="../Capas/OsEscravos.jpg" alt="Os Escravos" />
+            <img src="../Capas/DomCasmurro.jpg" alt="Dom Casmurro" />
+            <img src="../Capas/ADivinaComedia.jpg" alt="A Dívina Comédia" />
+            <img src="../Capas/ADamaDasCamelias.jpg" alt="A Dama das Camelias" />
+            <img src="../Capas/AAlmadoLazaro.jpg" alt="A Alma do Lazaro" />
+            <img src="../Capas/Helena.jpg" alt="Helena" />
+            <img src="../Capas/ABelaMadameVargas.jpg" alt="A Bela Madame Vargas" />
+            <img src="../Capas/AUtopia.jpg" alt="A Utopia" />
+            <img src="../Capas/AIgrejaDoDiabo.jpg" alt="A IgrejaDoDiabo" />
+            <img src="../Capas/AMoreninha.jpg" alt="A Moreninha" />
+            <img src="../Capas/AHarpaDoCrente.jpg" alt="A Harpa do Crente" />
+            <img src="../Capas/Cancioneiro.jpg" alt="Cacioneiro" />
+            <img src="../Capas/EsteMundoDaInjusticaGlobalizada.jpg" alt="Este Mundo Da injustiça Globalizada" />
+            <img src="../Capas/LivroDeMaguas.jpg" alt="Livro de Máguas" />
+            <img src="../Capas/ATempestade.jpg" alt="">
+            <img src="../Capas/OsMaias.jpg" alt="">
         </div>
     </div>
     <div class="vantagens">
